# SMTPLibCurlWrapper

./: CMakeLists.txt  README.md
examples/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  login_data.hpp
include/: libcurlwrappersmtp.hpp
