cmake_minimum_required(VERSION 3.10)
project(SMTPLibCurlWrapper VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE Release)

include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(example_1 examples/example_1.cpp)
add_executable(example_2 examples/example_2.cpp)
add_executable(example_3 examples/example_3.cpp)
add_executable(example_4 examples/example_4.cpp)
add_executable(example_5 examples/example_5.cpp)
add_executable(example_6 examples/example_6.cpp)
add_executable(example_7 examples/example_7.cpp)
target_link_libraries(example_1 curl pthread)
target_link_libraries(example_2 curl pthread)
target_link_libraries(example_3 curl pthread)
target_link_libraries(example_4 curl pthread)
target_link_libraries(example_5 curl pthread)
target_link_libraries(example_6 curl pthread)
target_link_libraries(example_7 curl pthread)
